✨improve CreateResult
